# Real-world-ocaml

./: README.md
Chapter1/toolbox/: PROJ.md  digest.txt  dune-project
Chapter1/toolbox/lib/: dune  toolbox.ml
Chapter1/toolbox/test/: dune  test_binary.sh
asside-fp-ts/go/: README.md  go.mod
asside-fp-ts/go/src/: main.go
asside-fp-ts/ts/: README.md  package.json
asside-fp-ts/ts/src/: main.ts
chapter2/playing_aroung/: Makefile  dune-project
chapter2/playing_aroung/lib/: dune
chapter2/playing_aroung/test/: dune
chapter2/toolbox/: PROJ.md
chapter2/toolbox/lib/: dune  toolbox.ml
chapter3/fa/: .ocamlinit  PROJ.md  dune-project  sample1.txt  sample2.txt
chapter3/fa/lib/: dune  fa.ml
chapter3/fa/test/: dune
chapter3/playing_around/: .ocamlinit  dune-project
chapter3/playing_around/lib/: book.ml  dune
chapter3/playing_around/test/: dune
chapter4/kv/: .ocamlinit  PROJ.md  dune-project
chapter4/kv/lib/: dune  store.mli  store_list.ml  store_list.mli  store_map.ml
chapter4/kv/test/: dune
chapter4/pa/: dune-project
chapter4/pa/test/: dune
chapter5/ports/: PROJECT.md  dune  dune-project
chapter5/ports/_build/: .db  .digest-db  log
chapter5/ports/_build/default/: ports.dune-package  ports.install
chapter5/ports/lib/: dune  ports.ml
chapter5/ports/test/: dune
pa_template/_build/: .db  .digest-db  log
pa_template/_build/.promotion-staging/lib/: pa.ml
pa_template/_build/default/: pa.dune-package  pa.install
pa_template/_build/default/lib/: pa.cma  pa.cmxa  pa.cmxs  pa.ml  pa.pp.ml
pa_template/lib/: dune
(+44 files in other folders)
